[package]
name = "test-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.140"
tokio-util = { version = "0.7.15", features = ["compat", "io"] }
hyper = { version = "1.6.0" }
anyhow = "1.0.98"
# tokio-rustls = "0.26.2"
futures-rustls = "0.26.0"
futures = { version = "0.3.31" }
hyper-util = "0.1.0"
tower-service = "0.3.3"
